package main

import (
	"context"

	"neuralops/api/proto/iceberg/v1"
	"neuralops/pkg/logging"
)

type IcebergGRPCServer struct {
	icebergv1.UnimplementedIcebergServiceServer
	logger *logging.Logger
	// MinIO and Nessie clients would go here
}

func NewIcebergGRPCServer(logger *logging.Logger) *IcebergGRPCServer {
	return &IcebergGRPCServer{logger: logger}
}

func (s *IcebergGRPCServer) CreateTable(ctx context.Context, req *icebergv1.CreateTableRequest) (*icebergv1.CreateTableResponse, error) {
	s.logger.Info("Received CreateTable request", "table_name", req.TableName)
	// TODO: Implement table creation logic with Nessie and MinIO
	return &icebergv1.CreateTableResponse{Success: true}, nil
}

func (s *IcebergGRPCServer) AppendToTable(ctx context.Context, req *icebergv1.AppendToTableRequest) (*icebergv1.AppendToTableResponse, error) {
	s.logger.Info("Received AppendToTable request", "table_name", req.TableName, "data_path", req.DataPath)
	// TODO: Implement append logic with Nessie and MinIO
	return &icebergv1.AppendToTableResponse{Success: true}, nil
}

func (s *IcebergGRPCServer) OptimizeTable(ctx context.Context, req *icebergv1.OptimizeTableRequest) (*icebergv1.OptimizeTableResponse, error) {
	s.logger.Info("Received OptimizeTable request", "table_name", req.TableName)
	// TODO: Implement optimize logic with Nessie and MinIO
	return &icebergv1.OptimizeTableResponse{Success: true}, nil
}
